[project]
name = "elt-dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "João Henrique Sgobero",email = "joao.sgobero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.11.12,<2.0.0)",
    "dbt-snowflake (>=1.11.6,<2.0.0)",
    "dbt-postgres (>=1.10.2,<2.0.0)",
    "dbt-redshift (>=1.10.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
